--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
          body {
          overflow-x:  hidden;
          background: #90a4ae;
-         font-family: "Century Gothic";
+         font-family: "San Serif";
          }
          .form-container {
          margin: 10px;
